--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   shared_preferences: ^2.5.3
   flutter_svg: ^2.2.1
+  ionicons: ^0.2.2
 
 dev_dependencies:
   flutter_test:
